 - Removed some error logging and set them to respect the groupeletters.debug setting
 - Imporved how statistics are recorded

1.0 RC1
 - Fixed #13 properly set the batchsize for the queue
 - Corrected a date query issue which effected when a queue would send out
 - Added a debug setting that will log notes to the error log
 - Added basic stats #12
    - Numerous database changes
    - new setting: trackingPageID, useUrlTracking
    - [[+trackingImage]] - for Opened
    
 
1.0 beta4
 - #11 Updated German Translation
 - Added a snippet GroupElettersUpdateTables - only needed in you updated but it ran as install
 
1.0 beta3
 - Added #9 CSV Import feature
 - Added tabs to Subsriber and added in all fields for the window 
    New lexicons: groupeletters.subscribers.city, groupeletters.subscribers.m_name, 
        groupeletters.subscribers.basic_info, groupeletters.subscribers.address_info and groupeletters.subscribers.groups_info 
 - Fixed #10 Subscriber Add/Update Window issue
 - Fixed #7 Added in city column/field to db table 
 - Added #8 German Translation
 
1.0 beta2
 - Fixed #5 file path case wrong in plugin, could cause linux/unix not to work 
 
1.0 beta1
 - added 2 new lexicons
 - #3 fixed Queue snippet message
 - #4 Fixed spelling error
 
1.0 alpha3
-------------------
- Removed my email address from the sender list!
- Fix another spelling error and added more options in the GroupEletterSignup Chunk

1.0 alpha2
-------------------
- Fix create group error that did not save all data
- Fix spelling error for chunk name call
- Fix subscribe to group on signup page

1.0 alpha
-------------------
initial release